<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SignInActivity"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:padding="16dp"
  android:background="@drawable/background">

  <ImageView
    android:id="@+id/SIGNIN_imageView_head"
    android:layout_marginTop="64dp"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/head"/>

  <LinearLayout
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/username"
      android:textSize="20dp"/>
    <EditText
      android:id="@+id/SIGNIN_editText_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/SIGNIN_editText_usernameHint"/>
  </LinearLayout>

  <LinearLayout
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/password"
      android:textSize="20dp"/>
    <EditText
      android:id="@+id/SIGNIN_editText_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/SIGNIN_editText_passwordHint"
      android:inputType="textPassword"/>
  </LinearLayout>

  <Button
    android:id="@+id/SIGNIN_button_signIn"
    android:layout_marginTop="32dp"
    android:layout_width="128dp"
    android:layout_height="64dp"
    android:background="@drawable/button"
    android:text="@string/SIGNIN_button_signIn"/>

</LinearLayout>