<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:padding="16dp"
  android:background="@drawable/background">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:orientation="horizontal">
    <ImageView
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/baby"/>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:paddingLeft="32dp"
      android:orientation="vertical">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/username"/>
        <TextView
          android:id="@+id/MAIN_textView_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:text="@string/placeholder"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password"/>
        <TextView
          android:id="@+id/MAIN_textView_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:text="@string/placeholder"/>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_gravity="center"
    android:text="@string/MAIN_textView_buy"
    android:textSize="20dp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/agility" />
    <ProgressBar
      android:id="@+id/MAIN_progressBar_agility"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/progressBarStyleHorizontal"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/attack" />
    <ProgressBar
      android:id="@+id/MAIN_progressBar_attack"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/progressBarStyleHorizontal"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/health" />
    <ProgressBar
      android:id="@+id/MAIN_progressBar_health"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/progressBarStyleHorizontal"/>
  </LinearLayout>

  <Button
    android:id="@+id/MAIN_button_shop"
    android:layout_width="128dp"
    android:layout_height="64dp"
    android:background="@drawable/button"
    android:text="@string/MAIN_button_shop"/>

</LinearLayout>