<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="8dp"
android:orientation="horizontal">
<ImageView
  android:id="@+id/EQUIPMENTLIST_head"
  android:layout_width="96dp"
  android:layout_height="96dp"
  android:src="@drawable/head"/>
<TextView
  android:id="@+id/EQUIPMENTLIST_name"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:padding="8dp"
  android:layout_gravity="center"
  android:text="@string/EQUIPMENTLIST_name"/>
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  android:gravity="center"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/agility"/>
    <TextView
      android:id="@+id/EQUIPMENTLIST_agility"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:text="@string/placeholder"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/attack"/>
    <TextView
      android:id="@+id/EQUIPMENTLIST_attack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:text="@string/placeholder"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/health"/>
    <TextView
      android:id="@+id/EQUIPMENTLIST_health"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:text="@string/placeholder"/>
  </LinearLayout>
</LinearLayout>
</LinearLayout>
